# crossplatform-sdl2-template

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cc
